php8 and laravel9 support

--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
         }
     ],
     "require": {
-        "php": "^7.3",
-        "illuminate/support": "^5.8|^6.0|^7.0|^8.0",
+        "php": "^7.3|^8.0",
+        "illuminate/support": "^5.8|^6.0|^7.0|^8.0|^9.0",
         "espresso-dev/instagram-basic-display-php": "^1.1"
     },
     "require-dev": {
